Add views to rhtml and setup surrounding CSS

--- a/clients/todos/english.lproj/body.rhtml
+++ b/clients/todos/english.lproj/body.rhtml
@@ -1,18 +1,21 @@
 <% content_for('body') do %>
-<div class="sc-welcome">
-  <img class="logo" src="<%= static_url('images/sproutcore-logo') %>" />
-  <div class="message">
-    <h1>Welcome!</h1>
-    <h3>You are now running SproutCore.</h3>
-    <div class="sticky-note">
-      <p>Things to do:</p>
-      <ul>
-        <li>Add a model:<br/>sc-gen model contacts/my_model</li>
-        <li>Add a controller:<br/>sc-gen controller contacts/my_controller</li>
-        <li>Edit english.lproj/body.rhtml</li>
-        <li>Build for deployment:<br />sc-build</li>
-      </ul>
-    </div>
+<% view :todos do %>
+
+<div class="header">
+  <h1>Todos</h1>
+  <div class="buttons">
+    <%= button_view :outlet => true, :title => 'Add' %>
+    <%= button_view :outlet => true, :title => 'Delete' %>
   </div>
 </div>
+
+<% scroll_view :tasks_scroll_view, :outlet => true do %>
+  <%= list_view :outlet => true %>
+<% end %>
+
+<div class="footer">
+</div>
+
+<% end %>
+
 <% end %>
