Finalize body.rhtml options for step 5

--- a/clients/todos/english.lproj/body.rhtml
+++ b/clients/todos/english.lproj/body.rhtml
@@ -14,6 +14,7 @@
     :content_value_key => 'title',
     :content_checkbox_key => 'isDone',
     :content_value_editable => true,
+    :can_reorder_content => true,
     :can_delete_content => true,
     :bind => {
       :content => "Todos.tasksController.arrangedObjects",
